--- a/secrets/templates/harvester-db.yaml
+++ b/secrets/templates/harvester-db.yaml
@@ -6,8 +6,8 @@ metadata:
 type: Opaque
 data:
   root_password: {{ .Values.harvester.database.admin_password | b64enc }}
-  database_name: {{ "harvester" | b64enc }}
-  user_name: {{ "harvester" | b64enc }}
+  database_name: {{ .Values.harvester.database.name | b64enc }}
+  user_name: {{ .Values.harvester.database.user | b64enc }}
   user_password: {{ .Values.harvester.database.password | b64enc }}
 
 ---
