--- a/secrets/values.yaml
+++ b/secrets/values.yaml
@@ -76,7 +76,10 @@ harvester:
   harvesterID: "my-harvester"
 
   database:
+    name: "harvester"
+    user: "harvester"
     password: "FIXME"
+    admin_password: "FIXME"
     # set only when using an external database
     # dbhost: "localhost"
     dbhost: ""
