--- a/secrets/templates/harvester-db.yaml
+++ b/secrets/templates/harvester-db.yaml
@@ -6,7 +6,9 @@ metadata:
 type: Opaque
 data:
   root_password: {{ .Values.harvester.database.admin_password | b64enc }}
+  {{- if .Values.harvester.database.name }}
   database_name: {{ .Values.harvester.database.name | b64enc }}
+  {{- end }}
   user_name: {{ .Values.harvester.database.user | b64enc }}
   user_password: {{ .Values.harvester.database.password | b64enc }}
 
