--- a/secrets/templates/harvester.yaml
+++ b/secrets/templates/harvester.yaml
@@ -6,11 +6,14 @@ metadata:
   name: {{ include "secrets.fullname" . }}-harvester-envs
 type: Opaque
 stringData:
-  MARIADB_DATABASE: "harvester"
-  MARIADB_USER: "harvester"
+  MARIADB_DATABASE: {{ .Values.harvester.database.name | default "harvester" }}
+  MARIADB_USER: {{ .Values.harvester.database.user | default "harvester" }}
   MARIADB_PASSWORD: "{{ .Values.harvester.database.password }}"
   MARIADB_ROOT_PASSWORD: "{{ .Values.harvester.database.password }}-admin"
   HARVESTER_DB_HOST: "{{ .Values.harvester.database.dbhost | default (printf "%s-mariadb" (include "harvester_ref" .)) }}"
+  {{- if .Values.harvester.database.dbhost_add_index }}
+  HARVESTER_DB_HOST_ADD_INDEX: "{{ .Values.harvester.database.dbhost_add_index" }}
+  {{- end }}
 
   PANDA_AUTH_ID_TOKEN: {{ .Values.auth.authIdToken }}
   PANDA_AUTH_VO: {{ .Values.auth.authVO }}
