--- a/secrets/templates/harvester.yaml
+++ b/secrets/templates/harvester.yaml
@@ -12,7 +12,7 @@ stringData:
   MARIADB_ROOT_PASSWORD: "{{ .Values.harvester.database.password }}-admin"
   HARVESTER_DB_HOST: "{{ .Values.harvester.database.dbhost | default (printf "%s-mariadb" (include "harvester_ref" .)) }}"
   {{- if .Values.harvester.database.dbhost_add_index }}
-  HARVESTER_DB_HOST_ADD_INDEX: "{{ .Values.harvester.database.dbhost_add_index" }}
+  HARVESTER_DB_HOST_ADD_INDEX: "{{ .Values.harvester.database.dbhost_add_index }}"
   {{- end }}
 
   PANDA_AUTH_ID_TOKEN: {{ .Values.auth.authIdToken }}
