--- a/secrets/values.yaml
+++ b/secrets/values.yaml
@@ -83,6 +83,7 @@ harvester:
     # set only when using an external database
     # dbhost: "localhost"
     dbhost: ""
+    dbhost_add_index: "false"
 
   # condor channel: 9, stable, or latest
   condorChannel: "latest"
