update harvester schema

--- a/helm/harvester/charts/harvester/panda_harvester_configmap.json
+++ b/helm/harvester/charts/harvester/panda_harvester_configmap.json
@@ -3,7 +3,7 @@
     "engine": "mariadb",
     "useMySQLdb": true,
     "syncMaxWorkerID": true,
-    "schema": "harvester",
+    "schema": "${MARIADB_DATABASE}",
     "host": "${HARVESTER_DB_HOST}",
     "password": "${MARIADB_PASSWORD}",
     "verbose": true
