update harvester start script

--- a/secrets/templates/harvester.yaml
+++ b/secrets/templates/harvester.yaml
@@ -13,6 +13,13 @@ stringData:
   HARVESTER_DB_HOST: "{{ .Values.harvester.database.dbhost | default (printf "%s-mariadb" (include "harvester_ref" .)) }}"
   {{- if .Values.harvester.database.dbhost_add_index }}
   HARVESTER_DB_HOST_ADD_INDEX: "{{ .Values.harvester.database.dbhost_add_index }}"
+  HARVESTER_DB_HOST_PREFIX: "{{ .Values.harvester.database.dbhost_prefix }}"
+  {{- if .Values.harvester.database.dbhost_domain }}
+  HARVESTER_DB_HOST_DOMAIN: "{{ .Values.harvester.database.dbhost_domain }}"
+  {{- end }}
+  {{- if .Values.harvester.database.name_prefix }}
+  MARIADB_DATABASE_PREFIX: "{{ .Values.harvester.database.name_prefix }}"
+  {{- end }}
   {{- end }}
 
   PANDA_AUTH_ID_TOKEN: {{ .Values.auth.authIdToken }}
