--- a/secrets/values.yaml
+++ b/secrets/values.yaml
@@ -84,6 +84,10 @@ harvester:
     # dbhost: "localhost"
     dbhost: ""
     dbhost_add_index: "false"
+    dbhost_prefix: ""
+    dbhost_domain: ""
+    # database name prefix
+    name_prefix: ""
 
   # condor channel: 9, stable, or latest
   condorChannel: "latest"
