update queue config

--- a/helm/harvester/charts/harvester/queueconfig/lsst.panda_queueconfig.json
+++ b/helm/harvester/charts/harvester/queueconfig/lsst.panda_queueconfig.json
@@ -276,15 +276,18 @@
       "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
       "templateQueueName": "production.pull",
       "maxWorkers": 3000,
-      "maxNewWorkersPerCycle":20,
+      "maxNewWorkersPerCycle":50,
       "nQueueLimitWorkerMin":3,
       "nQueueLimitWorkerMax": 100,
-      "nQueueLimitJobMax":10000,
+      "nQueueLimitJobMax":3500,
       "nQueueLimitJobMin":1000,
-      "nQueueLimitJob": 10000,
+      "nQueueLimitJob": 3500,
       "nQueueLimitWorker":10000,
 
       "submitter": {
+	  "nCore": 1,
+          "nCorePerNode": 1,
+          "submitMode": "PULL",
 	  "ceQueueName": "rubin",
 	  "ceARCGridType": "arc",
 	  "ceHostname": "sdfarcce001.slac.stanford.edu",
@@ -298,16 +301,19 @@
     "prodSourceLabel": "managed",
     "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
     "templateQueueName": "production.pull",
-    "maxWorkers": 3000,
+    "maxWorkers": 4000,
     "maxNewWorkersPerCycle":50,
     "nQueueLimitWorkerMin":3,
     "nQueueLimitWorkerMax": 200,
-    "nQueueLimitJobMax":10000,
+    "nQueueLimitJobMax":4500,
     "nQueueLimitJobMin":1200,
-    "nQueueLimitJob": 10000,
+    "nQueueLimitJob": 4500,
     "nQueueLimitWorker":100000,
 
     "submitter": {
+	  "nCore": 1,
+          "nCorePerNode": 1,
+          "submitMode": "PULL",
           "ceQueueName": "rubin",
           "ceARCGridType": "arc",
 	  "ceHostname": ["sdfarcce001.slac.stanford.edu", "sdfarcce001.slac.stanford.edu"],
@@ -322,16 +328,19 @@
     "prodSourceLabel": "managed",
     "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
     "templateQueueName": "production.pull",
-    "maxWorkers": 1500,
-    "maxNewWorkersPerCycle":20,
+    "maxWorkers": 3000,
+    "maxNewWorkersPerCycle":50,
     "nQueueLimitWorkerMin":3,
     "nQueueLimitWorkerMax": 100,
-    "nQueueLimitJobMax":10000,
+    "nQueueLimitJobMax":3500,
     "nQueueLimitJobMin":1200,
-    "nQueueLimitJob": 10000,
+    "nQueueLimitJob": 3500,
     "nQueueLimitWorker":10000,
 
     "submitter": {
+	  "nCore": 1,
+          "nCorePerNode": 1,
+          "submitMode": "PULL",
           "ceQueueName": "rubin",
           "ceARCGridType": "arc",
 	  "ceHostname": ["sdfarcce001.slac.stanford.edu", "sdfarcce001.slac.stanford.edu"],
@@ -346,16 +355,19 @@
     "prodSourceLabel": "managed",
     "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
     "templateQueueName": "production.pull",
-    "maxWorkers": 700,
-    "maxNewWorkersPerCycle":20,
+    "maxWorkers": 2500,
+    "maxNewWorkersPerCycle":50,
     "nQueueLimitWorkerMin":3,
     "nQueueLimitWorkerMax": 60,
-    "nQueueLimitJobMax":10000,
+    "nQueueLimitJobMax":3000,
     "nQueueLimitJobMin":1200,
-    "nQueueLimitJob": 10000,
+    "nQueueLimitJob": 3000,
     "nQueueLimitWorker":10000,
 
     "submitter": {
+	  "nCore": 1,
+          "nCorePerNode": 1,
+          "submitMode": "PULL",
           "ceQueueName": "rubin_himem",
           "ceARCGridType": "arc",
 	  "ceHostname": ["sdfarcce001.slac.stanford.edu", "sdfarcce001.slac.stanford.edu"],
@@ -370,22 +382,25 @@
     "prodSourceLabel": "managed",
     "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
     "templateQueueName": "production.push",
-    "maxWorkers": 100,
-    "maxNewWorkersPerCycle":20,
+    "maxWorkers": 1500,
+    "maxNewWorkersPerCycle":50,
     "nQueueLimitWorkerMin":3,
-    "nQueueLimitWorkerMax": 40,
-    "nQueueLimitJobMax":10000,
+    "nQueueLimitWorkerMax": 50,
+    "nQueueLimitJobMax":2000,
     "nQueueLimitJobMin":600,
-    "nQueueLimitJob": 10000,
+    "nQueueLimitJob": 2000,
     "nQueueLimitWorker":10000,
 
     "submitter": {
+	  "nCore": 1,
+          "nCorePerNode": 1,
+          "submitMode": "PUSH",
           "ceQueueName": "rubin_extra_himem",
           "ceARCGridType": "arc",
 	  "ceHostname": ["sdfarcce001.slac.stanford.edu", "sdfarcce001.slac.stanford.edu"],
           "ceEndpoint": ["https://sdfarcce001.slac.stanford.edu:9443/arex/rest/1.0",
                          "https://sdfarcce001.slac.stanford.edu:9444/arex/rest/1.0"],
-          "templateFile": "/opt/harvester/sandbox/lsst.submit_pilot_push.sdf"
+          "templateFile": "/opt/harvester/sandbox/lsst.submit_pilot_push_96.sdf"
       }
   },
 
@@ -394,16 +409,19 @@
     "prodSourceLabel": "managed",
     "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
     "templateQueueName": "production.push",
-    "maxWorkers": 50,
-    "maxNewWorkersPerCycle":20,
+    "maxWorkers": 200,
+    "maxNewWorkersPerCycle":50,
     "nQueueLimitWorkerMin":3,
     "nQueueLimitWorkerMax": 100,
-    "nQueueLimitJobMax":10000,
+    "nQueueLimitJobMax":300,
     "nQueueLimitJobMin":1200,
-    "nQueueLimitJob": 10000,
+    "nQueueLimitJob": 300,
     "nQueueLimitWorker":10000,
 
     "submitter": {
+	  "nCore": 1,
+          "nCorePerNode": 1,
+          "submitMode": "PUSH",
           "ceQueueName": "rubin_merge",
           "ceARCGridType": "arc",
 	  "ceHostname": ["sdfarcce001.slac.stanford.edu", "sdfarcce001.slac.stanford.edu"],
