--- a/helm/harvester/charts/harvester/queueconfig/lsst_prod.panda_queueconfig.json
+++ b/helm/harvester/charts/harvester/queueconfig/lsst_prod.panda_queueconfig.json
@@ -22,8 +22,8 @@
       "useSpool": false,
       "useAtlasGridCE": false,
       "useAtlasAGIS": true,
-      "templateFile": "/opt/harvester/sandbox/lsst_prod.submit_pilot.sdf",
-      "executableFile": "/opt/harvester/sandbox/lsst_prod.runpilot2-wrapper.sh",
+      "templateFile": "/opt/harvester/sandbox/lsst.submit_pilot.sdf",
+      "executableFile": "/opt/harvester/sandbox/lsst.runpilot2-wrapper.sh",
       "x509UserProxy": "/data/harvester/run/x509up_u25606",
       "logDir": "/var/log/condor_logs/${hostname}",
       "logBaseURL": "https://rubin-panda-bigmon-dev.slac.stanford.edu:8443/condor_logs/${hostname}",
@@ -87,8 +87,8 @@
       "useSpool": false,
       "useAtlasGridCE": false,
       "useAtlasAGIS": true,
-      "templateFile": "/opt/harvester/sandbox/lsst_prod.submit_pilot.sdf",
-      "executableFile": "/opt/harvester/sandbox/lsst_prod.runpilot2-wrapper.sh",
+      "templateFile": "/opt/harvester/sandbox/lsst.submit_pilot.sdf",
+      "executableFile": "/opt/harvester/sandbox/lsst.runpilot2-wrapper.sh",
       "x509UserProxy": "/data/harvester/run/x509up_u25606",
       "logDir": "/var/log/condor_logs/$hostname",
       "logBaseURL": "https://rubin-panda-bigmon-dev.slac.stanford.edu:8443/condor_logs/$hostname",
@@ -275,21 +275,24 @@
       "prodSourceLabel": "managed",
       "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
       "templateQueueName": "production.pull",
-      "maxWorkers": 900,
-      "maxNewWorkersPerCycle":20,
+      "maxWorkers": 3000,
+      "maxNewWorkersPerCycle":50,
       "nQueueLimitWorkerMin":3,
       "nQueueLimitWorkerMax": 100,
-      "nQueueLimitJobMax":10000,
+      "nQueueLimitJobMax":3500,
       "nQueueLimitJobMin":1000,
-      "nQueueLimitJob": 10000,
+      "nQueueLimitJob": 3500,
       "nQueueLimitWorker":10000,
 
       "submitter": {
+	  "nCore": 1,
+          "nCorePerNode": 1,
+          "submitMode": "PULL",
 	  "ceQueueName": "rubin",
 	  "ceARCGridType": "arc",
 	  "ceHostname": "sdfarcce001.slac.stanford.edu",
 	  "ceEndpoint": "https://sdfarcce001.slac.stanford.edu:9443/arex/rest/1.0",
-          "templateFile": "/opt/harvester/sandbox/lsst_prod.submit_pilot_pull.sdf"
+          "templateFile": "/opt/harvester/sandbox/lsst.submit_pilot_pull.sdf"
       }
   },
 
@@ -298,22 +301,25 @@
     "prodSourceLabel": "managed",
     "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
     "templateQueueName": "production.pull",
-    "maxWorkers": 3000,
+    "maxWorkers": 4000,
     "maxNewWorkersPerCycle":50,
     "nQueueLimitWorkerMin":3,
     "nQueueLimitWorkerMax": 200,
-    "nQueueLimitJobMax":10000,
+    "nQueueLimitJobMax":4500,
     "nQueueLimitJobMin":1200,
-    "nQueueLimitJob": 10000,
+    "nQueueLimitJob": 4500,
     "nQueueLimitWorker":100000,
 
     "submitter": {
+	  "nCore": 1,
+          "nCorePerNode": 1,
+          "submitMode": "PULL",
           "ceQueueName": "rubin",
           "ceARCGridType": "arc",
 	  "ceHostname": ["sdfarcce001.slac.stanford.edu", "sdfarcce001.slac.stanford.edu"],
           "ceEndpoint": ["https://sdfarcce001.slac.stanford.edu:9443/arex/rest/1.0",
 		         "https://sdfarcce001.slac.stanford.edu:9444/arex/rest/1.0"],
-          "templateFile": "/opt/harvester/sandbox/lsst_prod.submit_pilot_pull.sdf"
+          "templateFile": "/opt/harvester/sandbox/lsst.submit_pilot_pull.sdf"
       }
   },
 
@@ -322,22 +328,25 @@
     "prodSourceLabel": "managed",
     "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
     "templateQueueName": "production.pull",
-    "maxWorkers": 1500,
-    "maxNewWorkersPerCycle":20,
+    "maxWorkers": 3000,
+    "maxNewWorkersPerCycle":50,
     "nQueueLimitWorkerMin":3,
     "nQueueLimitWorkerMax": 100,
-    "nQueueLimitJobMax":10000,
+    "nQueueLimitJobMax":3500,
     "nQueueLimitJobMin":1200,
-    "nQueueLimitJob": 10000,
+    "nQueueLimitJob": 3500,
     "nQueueLimitWorker":10000,
 
     "submitter": {
+	  "nCore": 1,
+          "nCorePerNode": 1,
+          "submitMode": "PULL",
           "ceQueueName": "rubin",
           "ceARCGridType": "arc",
 	  "ceHostname": ["sdfarcce001.slac.stanford.edu", "sdfarcce001.slac.stanford.edu"],
           "ceEndpoint": ["https://sdfarcce001.slac.stanford.edu:9443/arex/rest/1.0",
                          "https://sdfarcce001.slac.stanford.edu:9444/arex/rest/1.0"],
-          "templateFile": "/opt/harvester/sandbox/lsst_prod.submit_pilot_pull.sdf"
+          "templateFile": "/opt/harvester/sandbox/lsst.submit_pilot_pull.sdf"
       }
   },
 
@@ -346,22 +355,25 @@
     "prodSourceLabel": "managed",
     "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
     "templateQueueName": "production.pull",
-    "maxWorkers": 700,
-    "maxNewWorkersPerCycle":20,
+    "maxWorkers": 2500,
+    "maxNewWorkersPerCycle":50,
     "nQueueLimitWorkerMin":3,
     "nQueueLimitWorkerMax": 60,
-    "nQueueLimitJobMax":10000,
+    "nQueueLimitJobMax":3000,
     "nQueueLimitJobMin":1200,
-    "nQueueLimitJob": 10000,
+    "nQueueLimitJob": 3000,
     "nQueueLimitWorker":10000,
 
     "submitter": {
+	  "nCore": 1,
+          "nCorePerNode": 1,
+          "submitMode": "PULL",
           "ceQueueName": "rubin_himem",
           "ceARCGridType": "arc",
 	  "ceHostname": ["sdfarcce001.slac.stanford.edu", "sdfarcce001.slac.stanford.edu"],
           "ceEndpoint": ["https://sdfarcce001.slac.stanford.edu:9443/arex/rest/1.0",
                          "https://sdfarcce001.slac.stanford.edu:9444/arex/rest/1.0"],
-          "templateFile": "/opt/harvester/sandbox/lsst_prod.submit_pilot_pull.sdf"
+          "templateFile": "/opt/harvester/sandbox/lsst.submit_pilot_pull.sdf"
       }
   },
 
@@ -370,22 +382,25 @@
     "prodSourceLabel": "managed",
     "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
     "templateQueueName": "production.push",
-    "maxWorkers": 100,
-    "maxNewWorkersPerCycle":20,
+    "maxWorkers": 1500,
+    "maxNewWorkersPerCycle":50,
     "nQueueLimitWorkerMin":3,
-    "nQueueLimitWorkerMax": 40,
-    "nQueueLimitJobMax":10000,
+    "nQueueLimitWorkerMax": 50,
+    "nQueueLimitJobMax":2000,
     "nQueueLimitJobMin":600,
-    "nQueueLimitJob": 10000,
+    "nQueueLimitJob": 2000,
     "nQueueLimitWorker":10000,
 
     "submitter": {
+	  "nCore": 1,
+          "nCorePerNode": 1,
+          "submitMode": "PUSH",
           "ceQueueName": "rubin_extra_himem",
           "ceARCGridType": "arc",
 	  "ceHostname": ["sdfarcce001.slac.stanford.edu", "sdfarcce001.slac.stanford.edu"],
           "ceEndpoint": ["https://sdfarcce001.slac.stanford.edu:9443/arex/rest/1.0",
                          "https://sdfarcce001.slac.stanford.edu:9444/arex/rest/1.0"],
-          "templateFile": "/opt/harvester/sandbox/lsst_prod.submit_pilot_push.sdf"
+          "templateFile": "/opt/harvester/sandbox/lsst.submit_pilot_push_96.sdf"
       }
   },
 
@@ -394,22 +409,25 @@
     "prodSourceLabel": "managed",
     "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
     "templateQueueName": "production.push",
-    "maxWorkers": 50,
-    "maxNewWorkersPerCycle":20,
+    "maxWorkers": 200,
+    "maxNewWorkersPerCycle":50,
     "nQueueLimitWorkerMin":3,
     "nQueueLimitWorkerMax": 100,
-    "nQueueLimitJobMax":10000,
+    "nQueueLimitJobMax":300,
     "nQueueLimitJobMin":1200,
-    "nQueueLimitJob": 10000,
+    "nQueueLimitJob": 300,
     "nQueueLimitWorker":10000,
 
     "submitter": {
+	  "nCore": 1,
+          "nCorePerNode": 1,
+          "submitMode": "PUSH",
           "ceQueueName": "rubin_merge",
           "ceARCGridType": "arc",
 	  "ceHostname": ["sdfarcce001.slac.stanford.edu", "sdfarcce001.slac.stanford.edu"],
           "ceEndpoint": ["https://sdfarcce001.slac.stanford.edu:9443/arex/rest/1.0",
                          "https://sdfarcce001.slac.stanford.edu:9444/arex/rest/1.0"],
-          "templateFile": "/opt/harvester/sandbox/lsst_prod.submit_pilot_push.sdf"
+          "templateFile": "/opt/harvester/sandbox/lsst.submit_pilot_push.sdf"
       }
   },
 
@@ -432,7 +450,7 @@
           "ceARCGridType": "arc",
 	  "ceHostname": "sdfarcce001.slac.stanford.edu",
           "ceEndpoint": "https://arcce1.slac.stanford.edu:9443/arex/rest/1.0",
-          "templateFile": "/opt/harvester/sandbox/lsst_prod.submit_pilot_pull.sdf"
+          "templateFile": "/opt/harvester/sandbox/lsst.submit_pilot_pull.sdf"
       }
   },
 
@@ -455,7 +473,7 @@
           "ceARCGridType": "arc",
 	  "ceHostname": "sdfarcce001.slac.stanford.edu",
           "ceEndpoint": "https://arcce1.slac.stanford.edu:9443/arex/rest/1.0",
-          "templateFile": "/opt/harvester/sandbox/lsst_prod.submit_pilot_push.sdf"
+          "templateFile": "/opt/harvester/sandbox/lsst.submit_pilot_push.sdf"
       }
   },
 
@@ -477,8 +495,8 @@
           "ceQueueName": "htc",
           "ceARCGridType": "arc",
 	  "ceHostname": "sdfarcce001.slac.stanford.edu",
-          "ceEndpoint": "https://ccarccelsst_prod01.in2p3.fr:9443/arex/rest/1.0",
-          "templateFile": "/opt/harvester/sandbox/lsst_prod.submit_pilot_pull.sdf"
+          "ceEndpoint": "https://ccarccelsst01.in2p3.fr:9443/arex/rest/1.0",
+          "templateFile": "/opt/harvester/sandbox/lsst.submit_pilot_pull.sdf"
       }
   },
 
@@ -501,7 +519,7 @@
           "ceARCGridType": "arc",
           "ceHostname": "grendel.hec.lancs.ac.uk",
           "ceEndpoint": "https://grendel.hec.lancs.ac.uk:443/arex/rest/1.0",
-          "templateFile": "/opt/harvester/sandbox/lsst_prod.submit_pilot_pull.sdf"
+          "templateFile": "/opt/harvester/sandbox/lsst.submit_pilot_pull.sdf"
       }
   },
 
@@ -520,7 +538,7 @@
 
       "submitter": {
           "useAtlasGridCE": true,
-          "templateFile": "/opt/harvester/sandbox/lsst_prod.submit_pilot.sdf"
+          "templateFile": "/opt/harvester/sandbox/lsst.submit_pilot.sdf"
       }
   },
 
