--- a/helm/bigmon/charts/main/templates/service.yaml
+++ b/helm/bigmon/charts/main/templates/service.yaml
@@ -4,6 +4,8 @@ metadata:
   name: {{ include "main.fullname" . }}
   labels:
     {{- include "main.labels" . | nindent 4 }}
+  annotations:
+    nginx.ingress.kubernetes.io/secure-backends: "true"
 spec:
   type: {{ .Values.service.type }}
   ports:
