--- a/helm/harvester/charts/harvester/templates/statefulset.yaml
+++ b/helm/harvester/charts/harvester/templates/statefulset.yaml
@@ -178,6 +178,7 @@ spec:
               /opt/harvester/etc/rc.d/init.d/run-harvester-services;
               {{- else }}
               chmod -R 777 /var/log/panda;
+              chmod -R 777 /var/log/harvester_wdirs;
               chmod -R 777 /var/log/condor_logs;
               ln -s /var/log/condor_logs /var/www/html/;
               runuser -u atlpan -g zp -- /opt/harvester/etc/rc.d/init.d/run-harvester-services;
