--- a/secrets/templates/harvester.yaml
+++ b/secrets/templates/harvester.yaml
@@ -65,4 +65,17 @@ data:
     {{ $.Files.Get $path | b64enc }}
   {{- end }}
 
+---
+# certs
+apiVersion: v1
+kind: Secret
+metadata:
+  name: {{ include "secrets.fullname" . }}-harvester-certs
+type: Opaque
+data:
+  {{- range $path, $_ := .Files.Glob "files/harvester_certs/**.pem" }}
+  {{ base $path }}: |-
+    {{ $.Files.Get $path | b64enc }}
+  {{- end }}
+
 {{- end }}
