add harvester https to bigmon ingress

--- a/helm/harvester/charts/harvester/templates/statefulset.yaml
+++ b/helm/harvester/charts/harvester/templates/statefulset.yaml
@@ -190,7 +190,7 @@ spec:
             - name: http
               containerPort: 8080
               protocol: TCP
-            - name: http
+            - name: https
               containerPort: 8443
               protocol: TCP
           resources:
