fix harvester instance name for bigmon ingress

--- a/helm/bigmon/values/values-lsst-prod.yaml
+++ b/helm/bigmon/values/values-lsst-prod.yaml
@@ -19,7 +19,7 @@ main:
         paths:
           - path: /condor_logs
             pathType: Prefix
-            serviceName: harvester-dev
+            serviceName: harvester
             servicePort: 443
           - path: /
             pathType: Prefix
