update panda and idds cpu and mem limits

--- a/helm/idds/values/values-lsst.yaml
+++ b/helm/idds/values/values-lsst.yaml
@@ -13,6 +13,14 @@ rest:
     create: false
     size: 50Gi
 
+  resources:
+    limits:
+      cpu: 4000m
+      memory: 16Gi
+    requests:
+      cpu: 4000m
+      memory: 16Gi
+
   ingress:
     enabled: true
     hosts:
