--- a/helm/panda/charts/jedi/values.yaml
+++ b/helm/panda/charts/jedi/values.yaml
@@ -58,17 +58,17 @@ service:
   httpPort: 80
   httpsPort: 443
 
-resources:
+resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
   # choice for the user. This also increases chances charts run on environments with little
   # resources, such as Minikube. If you do want to specify resources, uncomment the following
   # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
-  limits:
-     cpu: 4000m
-     memory: 16Gi
-  requests:
-     cpu: 4000m
-     memory: 16Gi
+  # limits:
+  #   cpu: 4000m
+  #   memory: 16Gi
+  # requests:
+  #   cpu: 4000m
+  #   memory: 16Gi
 
 autoscaling:
   enabled: false
