--- a/helm/panda/charts/server/values.yaml
+++ b/helm/panda/charts/server/values.yaml
@@ -117,17 +117,17 @@ route:
     insecureEdgeTerminationPolicy: None
 
 
-resources:
+resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
   # choice for the user. This also increases chances charts run on environments with little
   # resources, such as Minikube. If you do want to specify resources, uncomment the following
   # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
-  limits:
-     cpu: 8000m
-     memory: 32Gi
-  requests:
-     cpu: 8000m
-     memory: 32Gi
+  # limits:
+  #   cpu: 8000m
+  #   memory: 32Gi
+  # requests:
+  #   cpu: 8000m
+  #   memory: 32Gi
 
 autoscaling:
   enabled: false
