--- a/helm/panda/values/values-lsst.yaml
+++ b/helm/panda/values/values-lsst.yaml
@@ -10,6 +10,14 @@ jedi:
     selector: false
     size: 50Gi
 
+  resources:
+    limits:
+      cpu: 4000m
+      memory: 16Gi
+    requests:
+      cpu: 4000m
+      memory: 16Gi
+
 server:
   replicaCount: 2
   persistentvolume:
@@ -17,6 +25,14 @@ server:
     create: false
     selector: false
     size: 50Gi
+
+  resources:
+    limits:
+      cpu: 8000m
+      memory: 32Gi
+    requests:
+      cpu: 8000m
+      memory: 32Gi
 
   # use Route class for ingress
   route:
