adjust panda queue worker limitation to avoid submitting too many pending workers

--- a/helm/harvester/charts/harvester/queueconfig/lsst.panda_queueconfig.json
+++ b/helm/harvester/charts/harvester/queueconfig/lsst.panda_queueconfig.json
@@ -4,7 +4,8 @@
     "isTemplateQueue": true,
     "prodSourceLabel": "managed",
     "nQueueLimitWorkerMin": 100,
-    "nQueueLimitWorkerMax": 10000,
+    "nQueueLimitWorker": 200,
+    "nQueueLimitWorkerMax": 200,
     "maxWorkers": 10,
     "maxNewWorkersPerCycle": 100,
     "mapType": "NoJob",
@@ -66,7 +67,9 @@
   "production.push": {
     "isTemplateQueue": true,
     "prodSourceLabel": "managed",
-    "nQueueLimitWorker": 10000,
+    "nQueueLimitWorkerMin": 100,
+    "nQueueLimitWorker": 200,
+    "nQueueLimitWorkerMax": 200,
     "nQueueLimitJobRatio":5000,
     "nQueueLimitJobMax": 1000,
     "nQueueLimitJobMin":3,
@@ -137,7 +140,9 @@
       "maxWorkers": 10000,
       "nQueueLimitWorkerMin": 1,
       "nQueueLimitWorkerMax": 100,
-      "nQueueLimitWorker":50,
+      "nQueueLimitWorkerMin": 100,
+      "nQueueLimitWorker": 200,
+      "nQueueLimitWorkerMax": 200,
       "maxNewWorkersPerCycle":50,
       "mapType":"NoJob",
       "truePilot":true,
@@ -206,7 +211,9 @@
       "prodSourceLabel":"managed",
       "nQueueLimitJobMax":10000,
       "nQueueLimitJob": 10000,
-      "nQueueLimitWorker":10000,
+      "nQueueLimitWorkerMin": 100,
+      "nQueueLimitWorker": 200,
+      "nQueueLimitWorkerMax": 200,
       "maxWorkers":50000,
       "maxNewWorkersPerCycle":500,
       "mapType":"OneToOne",
@@ -278,11 +285,11 @@
       "maxWorkers": 3000,
       "maxNewWorkersPerCycle":50,
       "nQueueLimitWorkerMin":3,
-      "nQueueLimitWorkerMax": 100,
+      "nQueueLimitWorkerMax": 200,
       "nQueueLimitJobMax":3500,
       "nQueueLimitJobMin":1000,
       "nQueueLimitJob": 3500,
-      "nQueueLimitWorker":10000,
+      "nQueueLimitWorker": 200,
 
       "submitter": {
 	  "nCore": 1,
@@ -308,7 +315,7 @@
     "nQueueLimitJobMax":4500,
     "nQueueLimitJobMin":1200,
     "nQueueLimitJob": 4500,
-    "nQueueLimitWorker":100000,
+    "nQueueLimitWorker":200,
 
     "submitter": {
 	  "nCore": 1,
@@ -331,11 +338,11 @@
     "maxWorkers": 3000,
     "maxNewWorkersPerCycle":50,
     "nQueueLimitWorkerMin":3,
-    "nQueueLimitWorkerMax": 100,
+    "nQueueLimitWorkerMax": 200,
     "nQueueLimitJobMax":3500,
     "nQueueLimitJobMin":1200,
     "nQueueLimitJob": 3500,
-    "nQueueLimitWorker":10000,
+    "nQueueLimitWorker":200,
 
     "submitter": {
 	  "nCore": 1,
@@ -358,11 +365,11 @@
     "maxWorkers": 2500,
     "maxNewWorkersPerCycle":50,
     "nQueueLimitWorkerMin":3,
-    "nQueueLimitWorkerMax": 60,
+    "nQueueLimitWorkerMax": 200,
     "nQueueLimitJobMax":3000,
     "nQueueLimitJobMin":1200,
     "nQueueLimitJob": 3000,
-    "nQueueLimitWorker":10000,
+    "nQueueLimitWorker":200,
 
     "submitter": {
 	  "nCore": 1,
@@ -385,11 +392,11 @@
     "maxWorkers": 1500,
     "maxNewWorkersPerCycle":50,
     "nQueueLimitWorkerMin":3,
-    "nQueueLimitWorkerMax": 50,
+    "nQueueLimitWorkerMax": 200,
     "nQueueLimitJobMax":2000,
     "nQueueLimitJobMin":600,
     "nQueueLimitJob": 2000,
-    "nQueueLimitWorker":10000,
+    "nQueueLimitWorker": 200,
 
     "submitter": {
 	  "nCore": 1,
@@ -412,11 +419,11 @@
     "maxWorkers": 200,
     "maxNewWorkersPerCycle":50,
     "nQueueLimitWorkerMin":3,
-    "nQueueLimitWorkerMax": 100,
+    "nQueueLimitWorkerMax": 200,
     "nQueueLimitJobMax":300,
     "nQueueLimitJobMin":1200,
     "nQueueLimitJob": 300,
-    "nQueueLimitWorker":10000,
+    "nQueueLimitWorker": 200,
 
     "submitter": {
 	  "nCore": 1,
@@ -485,11 +492,11 @@
       "maxWorkers": 3000,
       "maxNewWorkersPerCycle":20,
       "nQueueLimitWorkerMin":3,
-      "nQueueLimitWorkerMax": 100,
-      "nQueueLimitJobMax":10000,
+      "nQueueLimitWorkerMax": 200,
+      "nQueueLimitJobMax":3500,
       "nQueueLimitJobMin":1000,
-      "nQueueLimitJob": 10000,
-      "nQueueLimitWorker":10000,
+      "nQueueLimitJob": 3500,
+      "nQueueLimitWorker": 200,
 
       "submitter": {
           "ceQueueName": "htc",
@@ -508,11 +515,11 @@
       "maxWorkers": 1000,
       "maxNewWorkersPerCycle":20,
       "nQueueLimitWorkerMin":3,
-      "nQueueLimitWorkerMax": 100,
-      "nQueueLimitJobMax":10000,
+      "nQueueLimitWorkerMax": 200,
+      "nQueueLimitJobMax":1500,
       "nQueueLimitJobMin":100,
-      "nQueueLimitJob": 10000,
-      "nQueueLimitWorker":10000,
+      "nQueueLimitJob": 1500,
+      "nQueueLimitWorker":200,
 
       "submitter": {
 	  "ceQueueName": "grid7",
@@ -530,11 +537,11 @@
       "templateQueueName": "production.push",
       "maxWorkers": 1,
       "nQueueLimitWorkerMin":100,
-      "nQueueLimitWorkerMax": 500,
-      "nQueueLimitJobMax":10000,
+      "nQueueLimitWorkerMax": 200,
+      "nQueueLimitJobMax":1000,
       "nQueueLimitJobMin":100,
-      "nQueueLimitJob": 10000,
-      "nQueueLimitWorker":10000,
+      "nQueueLimitJob": 1000,
+      "nQueueLimitWorker":200,
 
       "submitter": {
           "useAtlasGridCE": true,
