--- a/rubin-panda-db-deploy/overlays/panda/prod/cnpg-panda-server-database.yaml
+++ b/rubin-panda-db-deploy/overlays/panda/prod/cnpg-panda-server-database.yaml
@@ -9,7 +9,7 @@ spec:
   backup:
     retentionPolicy: "15d"
     barmanObjectStore:
-      destinationPath: s3://rubin-usdf-panda
+      destinationPath: s3://rubin-usdf-panda-server
       endpointURL: https://s3dfrgw.slac.stanford.edu
       s3Credentials:
         accessKeyId:
