--- a/rubin-panda-db-deploy/overlays/idds/prod/archive/kustomization.yaml
+++ b/rubin-panda-db-deploy/overlays/idds/prod/archive/kustomization.yaml
@@ -20,8 +20,8 @@ secretGenerator:
   options:
     disableNameSuffixHash: true
   files:
-  - ACCESS_KEY_ID=etc/.secrets/client-id
-  - ACCESS_SECRET_KEY=etc/.secrets/client-secret
+  - ACCESS_KEY_ID=etc/.secrets/access-key
+  - ACCESS_SECRET_KEY=etc/.secrets/secret-key
 
 #nameSuffix: -dev
 namespace: panda-db
