--- a/rubin-panda-db-deploy/overlays/panda/prod/kustomization.yaml
+++ b/rubin-panda-db-deploy/overlays/panda/prod/kustomization.yaml
@@ -4,6 +4,7 @@ resources:
 # cnpg
 - cnpg-panda-server-database.yaml
 - cnpg-panda-server-pooler.yaml
+- backup.yaml
 
 ### hmm... the endpoint doens't exist here for kustomize to do anythign abot it; add into Makefile?
 #patchesStrategicMerge:
