--- a/helm/msgsvc/charts/activemq/values.yaml
+++ b/helm/msgsvc/charts/activemq/values.yaml
@@ -49,7 +49,7 @@ service:
   type: ClusterIP
   port: 61613
 
-resources: {}
+# resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
   # choice for the user. This also increases chances charts run on environments with little
   # resources, such as Minikube. If you do want to specify resources, uncomment the following
@@ -60,6 +60,14 @@ resources: {}
   # requests:
   #   cpu: 100m
   #   memory: 128Mi
+
+resources:
+    limits:
+      cpu: 4000m
+      memory: 18Gi
+    requests:
+      cpu: 4000m
+      memory: 18Gi
 
 autoscaling:
   enabled: false
