--- a/helm/panda/values/values-lsst-prod.yaml
+++ b/helm/panda/values/values-lsst-prod.yaml
@@ -25,7 +25,7 @@ server:
     class: wekafs--sdf-k8s01
     create: false
     selector: false
-    size: 50Gi
+    size: 500Gi
 
   resources:
     limits:
@@ -34,6 +34,8 @@ server:
     requests:
       cpu: 8000m
       memory: 32Gi
+
+  sharedCache: true
 
   # use Route class for ingress
   route:
