--- a/helm/panda/values/values-lsst.yaml
+++ b/helm/panda/values/values-lsst.yaml
@@ -24,7 +24,7 @@ server:
     class: wekafs--sdf-k8s01
     create: false
     selector: false
-    size: 50Gi
+    size: 500Gi
 
   resources:
     limits:
@@ -33,6 +33,8 @@ server:
     requests:
       cpu: 8000m
       memory: 32Gi
+
+  sharedCache: true
 
   # use Route class for ingress
   route:
